--- a/style.css
+++ b/style.css
@@ -9,26 +9,46 @@
   color: #D6F6DD;
   text-align: center;
 }
+.subtitle {
+  font-family: 'Ubuntu', sans-serif;
+  color: #758ECD;
+}
 
 .custom-nav {
   font-family: 'Ubuntu', sans-serif;
 }
 .custom-nav .navbar-item {
   color: #D6F6DD;
+  font-family: "Ubuntu", sans-serif;
+}
+.custom-nav .navbar-item:hover {
+  background-color: #758ECD;
+}
+.custom-nav .navbar-burger {
+  color:#D6F6DD;
 }
 
-.typing {
-  border-right: 5px solid #D6F6DD;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typing 3s steps(30, end) forwards, blink 0.75s step-start infinite;
+.typewriter h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  width: 45%;
+  border-right: .15em solid #FFA500; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .05em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
 }
 
+/* The typing effect */
 @keyframes typing {
-  from { width: 0; }
-  to { width: 60%; }
+  from { width: 0 }
+  to { width: 45% }
 }
 
-@keyframes blink {
-  50% { border-color: transparent; }
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
 }
+
