--- a/style.css
+++ b/style.css
@@ -27,6 +27,18 @@
 .custom-nav .navbar-burger {
   color:#D6F6DD;
 }
+.custom-nav .navbar-burger:hover {
+  color:#758ECD;
+}
+
+.custom-button {
+  background-color: #D6F6DD;
+  color:#2A2D34;
+  font-style:italic
+}
+.custom-button:hover {
+  color:#F39A9D
+}
 
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
