--- a/style.css
+++ b/style.css
@@ -37,14 +37,15 @@
   font-style:italic
 }
 .custom-button:hover {
-  color:#F39A9D
+  color:#F39A9D;
 }
 
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   width: 45%;
   border-right: .15em solid #FFA500; /* The typwriter cursor */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  white-space:nowrap;
+  margin: 0 auto;
   letter-spacing: .05em; /* Adjust as needed */
   animation: 
     typing 3.5s steps(40, end),
