--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   width: 45%;
   border-right: .15em solid #FFA500; /* The typwriter cursor */
-  white-space:nowrap;
+  white-space:normal;
   margin: 0 auto;
   letter-spacing: .05em; /* Adjust as needed */
   animation: 
